--- a/styles.css
+++ b/styles.css
@@ -5,44 +5,125 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #f0f0f0;
+    background: rgb(2,0,36);
+    background: linear-gradient(144deg, rgba(2,0,36,1) 13%, rgba(9,9,121,1) 35%, rgba(7,65,158,1) 53%, rgba(0,212,255,1) 100%);
+    padding: 10px;
+    box-sizing: border-box;
 }
 
-#login-container, #led-controls {
+#register-container, #login-container, #led-controls, #change-password {
     background: white;
-    padding: 20px;
+    padding: 50px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
+    width: 100%;
+    max-width: 400px;
 }
 
-input[type="password"] {
+.input-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.input-container input[type="password"] {
+    flex: 1;
     padding: 10px;
-    margin: 10px 0;
-    width: 80%;
     border: 1px solid #ccc;
     border-radius: 4px;
+    margin-right: 10px;
+    box-sizing: border-box;
+}
+
+.input-container label {
+    flex-shrink: 0;
+    white-space: nowrap;
+    display: flex;
+    align-items: center;
+    margin: 0;
 }
 
 button {
     padding: 10px 20px;
-    margin: 10px;
+    margin: 10px 0;
     border: none;
     border-radius: 4px;
     background-color: #28a745;
     color: white;
     cursor: pointer;
+    width: 100%;
+    max-width: 200px;
+    box-sizing: border-box;
+}
+
+#turnOffBtn {
+    background-color: red;
 }
 
 button:hover {
     background-color: #218838;
 }
 
-#error-message {
+button:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+}
+
+#error-message, #register-message, #change-password-message {
     color: red;
 }
 
 #led-status {
     margin-top: 20px;
     font-size: 18px;
+}
+
+h2 {
+    margin-bottom: 20px;
+}
+
+@media (max-width: 768px) {
+    #register-container, #login-container, #led-controls, #change-password {
+        padding: 30px;
+    }
+
+    button {
+        width: 100%;
+        margin: 5px 0;
+    }
+
+    .input-container {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .input-container input[type="password"] {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+
+    .input-container label {
+        margin-top: -10px;
+    }
+}
+
+@media (max-width: 480px) {
+    #register-container, #login-container, #led-controls, #change-password {
+        padding: 20px;
+    }
+
+    h2 {
+        font-size: 18px;
+    }
+
+    input[type="password"] {
+        font-size: 14px;
+    }
+
+    button {
+        font-size: 14px;
+        padding: 8px 16px;
+    }
 }
