--- a/styles.css
+++ b/styles.css
@@ -23,13 +23,25 @@ body {
 
 .input-container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    margin: 20px 20px;
+}
+
+.input-container input[type="text"] {
+    flex: 1;
     margin-bottom: 20px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-right: 10px;
+    box-sizing: border-box;
 }
 
 .input-container input[type="password"] {
     flex: 1;
+    margin-bottom: 20px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -56,6 +68,7 @@ button {
     width: 100%;
     max-width: 200px;
     box-sizing: border-box;
+    text-transform: uppercase;
 }
 
 #turnOffBtn {
